Внесены правки в контроллеры
